Fixed dark mode color & add message style

--- a/21_ToDolist/src/scss/component/function.scss
+++ b/21_ToDolist/src/scss/component/function.scss
@@ -1,7 +1,7 @@
 .function {
   &__btn {
     padding: 0.25rem 0.5rem;
-    background-color: var(--white-color);
+    background-color: transparent;
     border: 1px solid var(--gray-color);
     border-radius: 0.5rem;
     color: var(--gray-color);
