--- a/21_ToDolist/src/scss/component/main.scss
+++ b/21_ToDolist/src/scss/component/main.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
   }
   &__tasks {
     display: flex;
