--- a/21_ToDolist/src/scss/component/task.scss
+++ b/21_ToDolist/src/scss/component/task.scss
@@ -2,60 +2,115 @@
   font-size: 0.875rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
   &__box {
-    width: 100%;
     padding: 1rem 0.5rem;
     margin-bottom: 1.5rem;
     display: grid;
-    grid-template-columns: 0.5fr 1fr 3fr 1fr 1fr;
+    grid-template-columns: 0.5fr 0.5fr 3fr 1fr 1fr;
     align-items: center;
     justify-items: center;
+    gap: 1rem;
     background-color: var(--white-color);
     border-radius: 0.5rem;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
-    &[data-priority="1"] {
-      border-left: 3px solid var(--low-level-color);
+    box-shadow: 0 0 1rem var(--shadow);
+    text-align: center;
+    &[data-priority="3"] {
+      border-left: 4px solid var(--low-level-color);
     }
     &[data-priority="2"] {
-      border-left: 3px solid var(--medium-level-color);
+      border-left: 4px solid var(--medium-level-color);
     }
-    &[data-priority="3"] {
-      border-left: 3px solid var(--high-level-color);
+    &[data-priority="1"] {
+      border-left: 4px solid var(--high-level-color);
     }
+    &.completed {
+      background-color: var(--third-color);
+      opacity: 0.6;
+    }
+  }
+  &__box--read input {
+    padding: 0.25rem;
+    align-self: center;
+    border: none;
+    border-radius: 1rem;
+
+    text-align: center;
+    outline: none;
+    font-weight: 700;
+    pointer-events: none;
+  }
+
+  &__box--read .task__btn,
+  #task__check {
+    pointer-events: painted;
+    cursor: pointer;
+  }
+
+  &__box--edit input {
+    padding: 0.25rem;
+    align-self: center;
+    border: 1px solid var(--third-color);
+    background-color: transparent;
+    border-radius: 1rem;
+    text-align: center;
+    outline: none;
+    font-weight: 700;
+    pointer-events: pointed;
+  }
+  &__box--edit .task__project {
+    background-color: var(--second-color);
+  }
+
+  &__title {
+    width: 100%;
   }
   &__time {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 0.5rem;
     font-weight: 700;
   }
+  &__date {
+    width: 100%;
+  }
+  &__day {
+    width: 100%;
+  }
   &__project {
+    width: 100%;
     padding: 0.1rem 0.5rem;
     background-color: var(--second-color);
-    border-radius: 0.5rem;
     color: var(--white-color);
+    font-weight: 500;
   }
   &__btns {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 0.5rem;
-  }
-  &__btn {
-    padding: 0.25rem 0.5rem;
-    border-radius: 0.5rem;
-    border: 1px solid var(--gray-color);
-    background-color: var(--white-color);
-    font-size: 0.5rem;
-    color: var(--gray-color);
-    cursor: pointer;
-    &:hover {
-      border: 1px solid var(--main-color);
-      color: var(--main-color);
+    & .task__btn {
+      padding: 0.25rem 0.5rem;
+      background-color: var(--white-color);
+      border: 1px solid var(--gray-color);
+      color: var(--gray-color);
+      cursor: pointer;
+      font-weight: 500;
+    }
+    & .task__btn:hover {
+      border: 1px solid var(--second-color);
+      color: var(--second-color);
+    }
+    & .task__btn.disable {
+      pointer-events: none;
+      color: var(--gray-color);
+      border: 1px solid var(--third-color);
+      background-color: var(--third-color);
     }
   }
   &__alert {
+    text-align: center;
     margin-top: 3rem;
     font-size: 1.25rem;
     font-weight: 700;
