--- a/21_ToDolist/src/scss/component/tasks.scss
+++ b/21_ToDolist/src/scss/component/tasks.scss
@@ -2,7 +2,16 @@
   &__function {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 0.5rem;
+  }
+  &__message {
+    height: 1.25rem;
+    font-size: 0.75rem;
+    text-align: center;
+    text-transform: uppercase;
+    line-height: 1.25rem;
+    color: var(--second-color);
+    background-color: var(--third-color);
+    opacity: 0;
   }
   &__form {
     width: 100vw;
