--- a/21_ToDolist/src/scss/component/titles.scss
+++ b/21_ToDolist/src/scss/component/titles.scss
@@ -1,12 +1,14 @@
 .titles {
   display: grid;
-  grid-template-columns: 0.5fr 1fr 3fr 1fr 1fr;
+  grid-template-columns: 0.5fr 0.5fr 3fr 1fr 1fr;
+
   grid-template-rows: 1fr;
   align-items: center;
   justify-items: center;
   padding: 0.5rem 0.5rem;
 
   &__item {
+    color: var(--dark-color);
     font-size: 0.875rem;
   }
 }
