--- a/21_ToDolist/src/scss/global/boilerplate.scss
+++ b/21_ToDolist/src/scss/global/boilerplate.scss
@@ -15,4 +15,5 @@ body {
   display: flex;
   justify-content: center;
   position: relative;
+  background-color: var(--bgc-color);
 }
